<resources>
    <string name="app_name">时间都去哪了</string>

    <string name="title_location">获取定位</string>
    <string name="battery_saving">低功耗模式</string>
    <string name="device_sensors">仅设备模式</string>
    <string name="hight_accuracy">高精度模式</string>
    <string name="interval">定位周期(ms)</string>
    <string name="httpTimeout">网络超时(ms)</string>
    <string name="location_once">单次定位</string>
    <string name="needAddress">逆地理编码</string>
    <string name="cacheAble">开启缓存</string>
    <string name="onceLastest">提高首次定位精度</string>
    <string name="gpsFirst">GPS优先</string>
    <string name="useSensor">使用传感器</string>
    <string name="wifiScan">开启wifi扫描</string>

    <string name="alarmInterval">唤醒周期(s)</string>

    <string name="startLocation">开始定位</string>
    <string name="stopLocation">停止定位</string>

    <string name="defaultInteval">2000</string>
    <string name="defaultHttpTimeout">30000</string>

    <string name="hello_world">Hello world!</string>
    <string name="start_date">请选择开始时间：</string>
    <string name="end_date">请选择结束时间：</string>
    <string name="btn_confirm">确 定</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <!--登录界面-->
    <string name="passwordHint">请输入密码</string>
    <string name="usernameHint">请输入用户名</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="getPassword">找回密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <!--注册界面-->
    <string name="nextStep">完成</string>
    <string name="signatureHint">请输入个性签名</string>
    <string name="signature">个性签名</string>
    <!--个人中心界面-->
    <string name="str_record">战绩</string>
    <string name="str_honor">荣誉</string>
    <string name="str_today">今日目标</string>
</resources>
